[gd_scene load_steps=13 format=3 uid="uid://bgxtcw3avp6hy"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_oy46f"]
[ext_resource type="Texture2D" uid="uid://r651yyc5inkh" path="res://assets/mute.png" id="3_0awhx"]
[ext_resource type="Texture2D" uid="uid://1ak5woqhhor1" path="res://assets/bg 1.jpg" id="3_4om4f"]
[ext_resource type="Texture2D" uid="uid://kenhl0ljrv1i" path="res://assets/unmute.png" id="4_y7jkq"]
[ext_resource type="AudioStream" uid="uid://bnb1b8i50wcgk" path="res://assets/bg_audio.mp3" id="5_wjybp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_om005"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48qs2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1t8xp"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[sub_resource type="Theme" id="Theme_lv5p7"]
Button/colors/font_outline_color = Color(0, 0, 0, 0)
Button/font_sizes/font_size = 25
Button/styles/hover = SubResource("StyleBoxEmpty_om005")
Button/styles/normal = SubResource("StyleBoxEmpty_48qs2")
Button/styles/pressed = SubResource("StyleBoxEmpty_1t8xp")

[sub_resource type="Theme" id="Theme_axl37"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bfwvd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0awhx")
}],
"loop": true,
"name": &"mute",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_y7jkq")
}],
"loop": true,
"name": &"unmute",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_yernr"]
Label/font_sizes/font_size = 18

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lv5p7")
script = ExtResource("1_oy46f")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(512.5, 383.5)
scale = Vector2(1.42083, 2.13611)
texture = ExtResource("3_4om4f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -78.0
offset_right = 33.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_axl37")
text = "PLAY
"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="volume" type="Button" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 184.0
offset_right = 188.0
offset_bottom = 205.0
scale = Vector2(3, 3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="volume"]
position = Vector2(15.6667, 10.6667)
scale = Vector2(0.0520833, 0.0520833)
sprite_frames = SubResource("SpriteFrames_bfwvd")
animation = &"unmute"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wjybp")
volume_db = 3.962
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 319.0
offset_top = 209.0
offset_right = 600.0
offset_bottom = 268.0
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_yernr")
text = "➕ ✖ MATH RHYTHM ➗ ➖
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="volume" to="." method="_on_volume_pressed"]
